# qt_gl_gst_poc

src/qt_gl_gst/: CMakeLists.txt  applogger.cpp  applogger.h  asyncwaitingqueue.h  controlsform.cpp  controlsform.h  glpowervrwidget.cpp  glpowervrwidget.h  glwidget.cpp  glwidget.h  gstpipeline.cpp  gstpipeline.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  pipeline.cpp  pipeline.h  qt_gl_gst.pro  shaderlists.cpp  shaderlists.h  tigstpipeline.cpp  tigstpipeline.h  yuvdebugwindow.cpp  yuvdebugwindow.h
